--- a/pages/4368.html
+++ b/pages/4368.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -453,7 +452,7 @@ margin-left: 0em;
 <h2 id='the_idea'>The idea</h2>
 
 <p><strong>Gabriel–Ulmer duality</strong> says that there is an <a class='existingWikiWord' href='/nlab/show/equivalence+of+categories'>equivalence</a> of <a class='existingWikiWord' href='/nlab/show/2-category'>2-categories</a> (or in other words, a <a class='existingWikiWord' href='/nlab/show/equivalence+of+2-categories'>biequivalence</a>)</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3377a424e39d9cb80684d6b56c95c2440f84f12d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable displaystyle='false' rowspacing='0.5ex'><mtr><mtd><msup><mi>Lex</mi> <mi>op</mi></msup></mtd> <mtd><mo>→</mo></mtd> <mtd><mi>LFP</mi></mtd></mtr> <mtr><mtd><mi>C</mi></mtd> <mtd><mo>↦</mo></mtd> <mtd><mi>Lex</mi><mo stretchy='false'>(</mo><mi>C</mi><mo>,</mo><mi>Set</mi><mo stretchy='false'>)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'> 
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_1ab3356ef29dcde77052e76abc30229bb59f1b14_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable displaystyle='false' rowspacing='0.5ex'><mtr><mtd><msup><mi>Lex</mi> <mi>op</mi></msup></mtd> <mtd><mo>→</mo></mtd> <mtd><mi>LFP</mi></mtd></mtr> <mtr><mtd><mi>C</mi></mtd> <mtd><mo>↦</mo></mtd> <mtd><mi>Lex</mi><mo stretchy='false'>(</mo><mi>C</mi><mo>,</mo><mi>Set</mi><mo stretchy='false'>)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'> 
 \begin{matrix}
 Lex^{op} &amp; \to &amp;  LFP \\
   C      &amp; \mapsto &amp; Lex(C, Set) 
@@ -492,7 +491,7 @@ Lex^{op} &amp; \to &amp;  LFP \\
 </li>
 </ul>
 
-<p>The idea is that an object <math class='maruku-mathml' display='inline' id='mathml_3377a424e39d9cb80684d6b56c95c2440f84f12d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo>∈</mo><mi>Lex</mi></mrow><annotation encoding='application/x-tex'>C \in Lex</annotation></semantics></math> can be thought of as an <a class='existingWikiWord' href='/nlab/show/essentially+algebraic+theory'>essentially algebraic theory</a>, which has a category of <a class='existingWikiWord' href='/nlab/show/model'>models</a> <math class='maruku-mathml' display='inline' id='mathml_3377a424e39d9cb80684d6b56c95c2440f84f12d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Lex</mi><mo stretchy='false'>(</mo><mi>C</mi><mo>,</mo><mi>Set</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Lex(C,Set)</annotation></semantics></math>. Gabriel–Ulmer duality says that this category of models is locally finitely presentable, all LFP categories arise in this way, and we can recover the theory <math class='maruku-mathml' display='inline' id='mathml_3377a424e39d9cb80684d6b56c95c2440f84f12d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> from its category of models.</p>
+<p>The idea is that an object <math class='maruku-mathml' display='inline' id='mathml_1ab3356ef29dcde77052e76abc30229bb59f1b14_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo>∈</mo><mi>Lex</mi></mrow><annotation encoding='application/x-tex'>C \in Lex</annotation></semantics></math> can be thought of as an <a class='existingWikiWord' href='/nlab/show/essentially+algebraic+theory'>essentially algebraic theory</a>, which has a category of <a class='existingWikiWord' href='/nlab/show/model'>models</a> <math class='maruku-mathml' display='inline' id='mathml_1ab3356ef29dcde77052e76abc30229bb59f1b14_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Lex</mi><mo stretchy='false'>(</mo><mi>C</mi><mo>,</mo><mi>Set</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Lex(C,Set)</annotation></semantics></math>. Gabriel–Ulmer duality says that this category of models is locally finitely presentable, all LFP categories arise in this way, and we can recover the theory <math class='maruku-mathml' display='inline' id='mathml_1ab3356ef29dcde77052e76abc30229bb59f1b14_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> from its category of models.</p>
 
 <h2 id='references'>References</h2>
 
@@ -526,7 +525,13 @@ Lex^{op} &amp; \to &amp;  LFP \\
 
 <p>For a 2-dimensional analogue see the slides from a 2010 talk by Makkai: <a href='http://www.math.mcgill.ca/makkai/scans/2010Washington0001.pdf'>pdf</a></p>
 
-<p>The version for <math class='maruku-mathml' display='inline' id='mathml_3377a424e39d9cb80684d6b56c95c2440f84f12d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched categories</a>, where <math class='maruku-mathml' display='inline' id='mathml_3377a424e39d9cb80684d6b56c95c2440f84f12d_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> is closed symmetric monoidal category whose underlying category <math class='maruku-mathml' display='inline' id='mathml_3377a424e39d9cb80684d6b56c95c2440f84f12d_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>V</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>V_0</annotation></semantics></math> is locally small, complete and cocomplete is in section 9 (cf. theorem 9.8)</p>
+<p>A formal-categorical account using <a class='existingWikiWord' href='/nlab/show/Yoneda+structure'>Yoneda structures</a> can be found in</p>
+
+<ul>
+<li id='DL18'>Ivan Di Liberti, <a class='existingWikiWord' href='/nlab/show/Fosco+Loregian'>Fosco Loregian</a>, <em>Accessibility and Presentability in 2-Categories</em> , arXiv:1804.08710 (2018). (<a href='https://arxiv.org/abs/1804.08710'>abstract</a>)</li>
+</ul>
+
+<p>The version for <math class='maruku-mathml' display='inline' id='mathml_1ab3356ef29dcde77052e76abc30229bb59f1b14_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched categories</a>, where <math class='maruku-mathml' display='inline' id='mathml_1ab3356ef29dcde77052e76abc30229bb59f1b14_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> is closed symmetric monoidal category whose underlying category <math class='maruku-mathml' display='inline' id='mathml_1ab3356ef29dcde77052e76abc30229bb59f1b14_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>V</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>V_0</annotation></semantics></math> is locally small, complete and cocomplete is in section 9 (cf. theorem 9.8)</p>
 
 <ul>
 <li>G. M. Kelly, <em>Structures defined by finite limits in the enriched context</em>, Cahiers de Topologie et Géométrie Différentielle catégoriques, <strong>23</strong> no. 1 (1982), pp. 3-42, <a href='http://www.ams.org/mathscinet-getitem?mr=648793'>MR648793</a>,<a href='http://www.numdam.org/item?id=CTGDC_1982__23_1_3_0'>numdam</a></li>
@@ -544,7 +549,7 @@ Lex^{op} &amp; \to &amp;  LFP \\
 </li>
 </ul>
 
-<p>For a discussion of an <math class='maruku-mathml' display='inline' id='mathml_3377a424e39d9cb80684d6b56c95c2440f84f12d_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-version of Gabriel-Ulmer duality between finitely complete and idempotent complete <math class='maruku-mathml' display='inline' id='mathml_3377a424e39d9cb80684d6b56c95c2440f84f12d_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty, 1)</annotation></semantics></math>-categories and locally finitely presentable <math class='maruku-mathml' display='inline' id='mathml_3377a424e39d9cb80684d6b56c95c2440f84f12d_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty, 1)</annotation></semantics></math>-categories see this <a href='https://mathoverflow.net/q/293031/447'>MO discussion</a>.</p>
+<p>For a discussion of an <math class='maruku-mathml' display='inline' id='mathml_1ab3356ef29dcde77052e76abc30229bb59f1b14_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-version of Gabriel-Ulmer duality between finitely complete and idempotent complete <math class='maruku-mathml' display='inline' id='mathml_1ab3356ef29dcde77052e76abc30229bb59f1b14_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty, 1)</annotation></semantics></math>-categories and locally finitely presentable <math class='maruku-mathml' display='inline' id='mathml_1ab3356ef29dcde77052e76abc30229bb59f1b14_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty, 1)</annotation></semantics></math>-categories see this <a href='https://mathoverflow.net/q/293031/447'>MO discussion</a>.</p>
 
 <p>
  
@@ -553,19 +558,20 @@ Lex^{op} &amp; \to &amp;  LFP \\
 </div>
 
 <div class="revisedby">
-  Revised on February 23, 2018 02:55:51 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (147.147.173.215)
+  <p>
+  Last revised on May 17, 2018 at 15:00:34.
+  See the <a href="https://ncatlab.org/nlab/history/Gabriel-Ulmer duality" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gabriel-Ulmer+duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gabriel-Ulmer+duality/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/Gabriel-Ulmer+duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gabriel-Ulmer+duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Gabriel-Ulmer+duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gabriel-Ulmer+duality/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/Gabriel-Ulmer+duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gabriel-Ulmer+duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Gabriel-Ulmer duality/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Gabriel-Ulmer+duality" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Gabriel-Ulmer+duality" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Gabriel-Ulmer+duality" id="view_source" rel="nofollow">Source</a>
