--- a/pages/18334.html
+++ b/pages/18334.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/7815/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -692,6 +691,12 @@ margin-left: 0em;
 <li id='BeniniSchenkelWoike17'><a class='existingWikiWord' href='/nlab/show/Marco+Benini'>Marco Benini</a>, <a class='existingWikiWord' href='/nlab/show/Alexander+Schenkel'>Alexander Schenkel</a>, <a class='existingWikiWord' href='/nlab/show/Lukas+Woike'>Lukas Woike</a>, <em>Operads for algebraic quantum field theory</em> (<a href='https://arxiv.org/abs/1709.08657'>arXiv:1709.08657</a>)</li>
 </ul>
 
+<p>and its <a class='existingWikiWord' href='/nlab/show/model+structure+on+algebras+over+an+operad'>model structure on algebras over an operad</a> (with respect to the <a class='existingWikiWord' href='/nlab/show/model+structure+on+chain+complexes'>model structure on chain complexes</a>) is discussed in</p>
+
+<ul>
+<li id='BeniniSchenkelWoike18'><a class='existingWikiWord' href='/nlab/show/Marco+Benini'>Marco Benini</a>, <a class='existingWikiWord' href='/nlab/show/Alexander+Schenkel'>Alexander Schenkel</a>, <a class='existingWikiWord' href='/nlab/show/Lukas+Woike'>Lukas Woike</a>, <em>Homotopy theory of algebraic quantum field theories</em> (<a href='https://arxiv.org/abs/1805.08795'>arXiv:1805.08795</a>)</li>
+</ul>
+
 <p>The <a class='existingWikiWord' href='/nlab/show/Boardman-Vogt+resolution'>Boardman-Vogt resolution</a> of the <a class='existingWikiWord' href='/nlab/show/operad'>operad</a> for <a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local nets of observables</a> (<a href='#BeniniSchenkelWoike17'>Benini-Schenkel-Woike 17</a>), lifting it to homotopy AQFT, is considered in</p>
 
 <ul>
@@ -710,19 +715,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 23, 2018 05:50:03 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.229.110.1)
+  <p>
+  Last revised on May 24, 2018 at 00:53:50.
+  See the <a href="https://ncatlab.org/nlab/history/homotopical algebraic quantum field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/homotopical+algebraic+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopical+algebraic+quantum+field+theory/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/homotopical+algebraic+quantum+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopical+algebraic+quantum+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/homotopical+algebraic+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopical+algebraic+quantum+field+theory/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/homotopical+algebraic+quantum+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopical+algebraic+quantum+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/homotopical algebraic quantum field theory/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/homotopical+algebraic+quantum+field+theory" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/homotopical+algebraic+quantum+field+theory" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/homotopical+algebraic+quantum+field+theory" id="view_source" rel="nofollow">Source</a>
