--- a/pages/673.html
+++ b/pages/673.html
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8559/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="https://ncatlab.org/nlab/author/David%20Roberts" title="Overview of nLab pages which David Roberts has edited" style="color: black">Pages contributed to</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
@@ -315,7 +315,7 @@ margin-left: 0em;
 
 <p>I was a Research Associate (i.e. a postdoc) at the University of Adelaide from October 2013 to April 2015. For the period July-2017 to February 2018 I was a Lecturer in the School of Mathematical Sciences.</p>
 
-<p>You may also find me on: <a href='https://www.ams.org/mathscinet/search/author.html?mrauthid=788905'>MathSciNet</a>|<a href='https://mathoverflow.net/users/4177/david-roberts'>MathOverflow</a>|<a href='https://thehighergeometer.wordpress.com/'>Wordpress</a>|<a href='https://arxiv.org/a/roberts_d_1.html'>arXiv</a>|<a href='http://orcid.org/0000-0002-3478-0522'>ORCiD</a>|<a href='https://publons.com/a/430214/'>Publons</a></p>
+<p>You may also find me on: <a href='https://www.ams.org/mathscinet/search/author.html?mrauthid=788905'>MathSciNet</a>|<a href='https://mathoverflow.net/users/4177/david-roberts'>MathOverflow</a>|<a href='https://arxiv.org/a/roberts_d_1.html'>arXiv</a>|<a href='http://orcid.org/0000-0002-3478-0522'>ORCiD</a>|<a href='https://publons.com/a/430214/'>Publons</a>|<a href='https://thehighergeometer.wordpress.com/'>theHigherGeometer</a></p>
 
 <p>If you need it, here is my email: droberts.[fifth and largest-known <a class='existingWikiWord' href='/nlab/show/Fermat+number'>Fermat prime</a>]@gmail.[etc]</p>
 
@@ -396,11 +396,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><em>Strict 2-sites, <math class='maruku-mathml' display='inline' id='mathml_12352fdcd809dd2aeaaa638b1e1bd3afd9da1d1f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math>-spans and localisations</em>.</p>
+<p><em>Strict 2-sites, <math class='maruku-mathml' display='inline' id='mathml_9b1b59c8ab317813afedad6bcb3c3546a176c3ee_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math>-spans and localisations</em>.</p>
 </li>
 
 <li>
-<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_12352fdcd809dd2aeaaa638b1e1bd3afd9da1d1f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
+<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_9b1b59c8ab317813afedad6bcb3c3546a176c3ee_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
 </li>
 
 <li>
@@ -519,14 +519,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on May  6, 2018 at 20:54:12.
+  Last revised on May 24, 2018 at 04:26:41.
   See the <a href="https://ncatlab.org/nlab/history/David Roberts" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/152" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(152 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/153" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(153 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/David Roberts/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
